@@ -6,13 +6,13 @@
 
     <groupId>cn.tealc</groupId>
     <artifactId>wuthering-waves-tool</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.3</version>
     <name>WutheringWavesTool</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.0</junit.version>
-        <javafx.version>23.0.2</javafx.version>
+        <javafx.version>25</javafx.version>
         <ikonli.version>12.3.1</ikonli.version>
     </properties>
 
@@ -131,7 +131,7 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.46.0.0</version>
+            <version>3.50.3.0</version>
         </dependency>
 
         <dependency>
@@ -191,7 +191,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <release>21</release>
+                    <release>25</release>
                 </configuration>
             </plugin>
 
@@ -207,8 +207,10 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>cn.tealc.wutheringwavestool.Main</mainClass>
                                 </transformer>
                             </transformers>
@@ -233,8 +235,12 @@
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
                             <options>
-                                <option>-Dprism.lcdtext=false</option>
+                                <option>-Dprism.lcdtext=true</option>
                                 <option>-XX:+UseZGC</option>
+                                <option>-Djavafx.enablePreview=true</option>
+                                <option>--enable-native-access=com.sun.jna</option>
+                                <option>--enable-native-access=javafx.graphics</option>
+                                <option> --enable-native-access=org.xerial.sqlitejdbc</option>
                             </options>
                         </configuration>
                     </execution>
@@ -243,6 +249,10 @@
         </plugins>
     </build>
     <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+        </repository>
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
